--- a/speed-typing/components/Passage.css
+++ b/speed-typing/components/Passage.css
@@ -17,6 +17,7 @@
     margin-bottom: 100px;
     color: hsl(240, 1%, 59%);
     position: relative;
+    font-size: 1.2rem;
 }
 
 .text-reference:focus {
